Se agregaron botones funcionales

--- a/Pagina/Favoritos.html
+++ b/Pagina/Favoritos.html
@@ -55,6 +55,8 @@
                             Después de ser brutalmente masacrado por monstruos en una mazmorra de alto rango, Jinwoo regresó con el Sistema, un
                             programa que solo él podía ver, que lo está nivelando en todos los aspectos. Ahora, está motivado para descubrir los
                             secretos detrás de sus poderes y la mazmorra que los generó.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -68,6 +70,8 @@
                                 del trabajo! Atrapado en un juego macabro donde cada "despido" es literal, Mickey tendrá que usar su
                                 ingenio (y sus
                                 múltiples "vidas") para sobrevivir a un jefe que no acepta renuncias... solo cadáveres.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -79,6 +83,8 @@
                             <p class="card-text">Tras reunirse con el recién electo presidente de los EE. UU., Thaddeus Ross, Sam Wilson se ve envuelto en un incidente
                             internacional. Deberá descubrir la razón detrás de una maquinación global antes de que el verdadero cerebro tras el plan
                             logre que el mundo entero se vuelva rojo de ira.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -90,8 +96,8 @@
         <div class="container">
             <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
             <p class="mb-0">
-                <a href="terminos.html" class="text-white">Términos y condiciones</a> |
-                <a href="privacidad.html" class="text-white">Política de privacidad</a>
+                <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
+                <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
             </p>
         </div>
     </footer>
