--- a/Pagina/Series.html
+++ b/Pagina/Series.html
@@ -57,6 +57,8 @@
                                 programa que solo él podía ver, que lo está nivelando en todos los aspectos. Ahora, está
                                 motivado para descubrir los
                                 secretos detrás de sus poderes y la mazmorra que los generó.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -74,6 +76,8 @@
                                 descubre que la herencia de su sangre esconde secretos cósmicos que desafían todo lo que creía
                                 saber sobre el bien y el
                                 mal.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -89,6 +93,8 @@
                                 compartían su pasión por este milenario juego de cartas, una Chihaya ya en la preparatoria sigue
                                 entrenando con un solo
                                 deseo: reunirse con ellos y alcanzar juntos la cumbre del torneo Hyakunin Isshu.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -110,6 +116,8 @@
                                 recuperarlos. Atrapado entre la soledad humana y el caos espiritual, Natsume emprenderá un viaje
                                 para devolver cada
                                 nombre… y quizá, en el proceso, encontrar un lugar al que pertenecer.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -126,6 +134,8 @@
                                 algunos aliados, otros
                                 enemigos, en una lucha constante donde los humanos pueden ser más peligrosos que los propios
                                 zombis.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -142,6 +152,8 @@
                                 norte. En medio del caos, solo la Guardia de la Noche una orden militar de marginados y
                                 proscritos se interpone entre
                                 la humanidad y las criaturas de hielo que amenazan con borrar el mundo del amanecer.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -163,6 +175,8 @@
                                 familiar de Morty se ve
                                 aún más afectada por estos viajes, generándole problemas emocionales y sociales tanto en casa
                                 como en la escuela.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -178,6 +192,8 @@
                                 Endsville, debe lidiar con los caprichos de los niños mientras intenta (sin éxito) mantener un
                                 ápice de su dignidad
                                 sobrenatural..</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -190,8 +206,8 @@
         <div class="container">
             <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
             <p class="mb-0">
-                <a href="terminos.html" class="text-white">Términos y condiciones</a> |
-                <a href="privacidad.html" class="text-white">Política de privacidad</a>
+                <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
+                <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
             </p>
         </div>
     </footer>
