--- a/Pagina/login.html
+++ b/Pagina/login.html
@@ -56,7 +56,7 @@
                     <label for="exampleInputPassword1" class="form-label">Contraseña</label>
                     <input type="password" class="form-control" id="exampleInputPassword1">
                 </div>
-                <button type="submit" class="btn btn-primary">Enviar</button>
+                <a href="index.html" button type="submit" class="btn btn-primary" id="Enviar">Enviar</button></a>
             </form>
         </div>
         <div class="text-center mt-3">
@@ -68,8 +68,8 @@
         <div class="container">
             <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
             <p class="mb-0">
-                <a href="terminos.html" class="text-white">Términos y condiciones</a> |
-                <a href="privacidad.html" class="text-white">Política de privacidad</a>
+                <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
+                <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
             </p>
         </div>
     </footer>
