--- a/Pagina/Peliculas.html
+++ b/Pagina/Peliculas.html
@@ -57,6 +57,8 @@
                                 llamado Jonathan.
                                 Juntos, luchan por sobrevivir a la implacable persecución de la Reina y aspiran a recuperar el
                                 reino en el proceso...</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -70,6 +72,8 @@
                                 del trabajo! Atrapado en un juego macabro donde cada "despido" es literal, Mickey tendrá que
                                 usar su ingenio (y sus
                                 múltiples "vidas") para sobrevivir a un jefe que no acepta renuncias... solo cadáveres.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -84,6 +88,8 @@
                                 internacional. Deberá descubrir la razón detrás de una maquinación global antes de que el
                                 verdadero cerebro tras el plan
                                 logre que el mundo entero se vuelva rojo de ira.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -102,6 +108,8 @@
                                 hacia los mares lejanos de Oceanía, adentrándose en aguas peligrosas y olvidadas para vivir una
                                 aventura como ninguna
                                 otra.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -115,6 +123,8 @@
                                 deberán enfrentar los desafíos de adaptarse a un mundo transformado, aprendiendo a sobrevivir y
                                 tal vez a convivir en
                                 medio de la incertidumbre.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -129,6 +139,8 @@
                                 Deadpool. Pero cuando su mundo se enfrenta a una amenaza existencial, no le quedará más remedio
                                 que ponerse el traje
                                 nuevamente… y arrastrar consigo a un tan reacio como inevitable Wolverine.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -149,6 +161,8 @@
                                 el futuro del Imperio en juego, Lucio deberá buscar en su pasado la fuerza y el honor necesarios
                                 para devolver la gloria
                                 a Roma.</p>
+                                <button class="btn btn-primary btn-more">Menos</button>
+                                <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -162,8 +176,8 @@
         <div class="container">
             <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
             <p class="mb-0">
-                <a href="terminos.html" class="text-white">Términos y condiciones</a> |
-                <a href="privacidad.html" class="text-white">Política de privacidad</a>
+                <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
+                <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
             </p>
         </div>
     </footer>
