--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -57,6 +57,8 @@
                             Después de ser brutalmente masacrado por monstruos en una mazmorra de alto rango, Jinwoo regresó con el Sistema, un
                             programa que solo él podía ver, que lo está nivelando en todos los aspectos. Ahora, está motivado para descubrir los
                             secretos detrás de sus poderes y la mazmorra que los generó.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -68,6 +70,8 @@
                             <p class="card-text">Princesa Blancanieves huye del castillo cuando la Reina Malvada, celosa de la belleza interior de Blancanieves, intenta
                             asesinarla. Adentrándose en el bosque oscuro, se topa con siete enanos mágicos y un joven ladrón llamado Jonathan.
                             Juntos, luchan por sobrevivir a la implacable persecución de la Reina y aspiran a recuperar el reino en el proceso...</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -80,6 +84,8 @@
                             <p class="card-text">Tras reunirse con el recién electo presidente de los EE. UU., Thaddeus Ross, Sam Wilson se ve envuelto en un incidente
                             internacional. Deberá descubrir la razón detrás de una maquinación global antes de que el verdadero cerebro tras el plan
                             logre que el mundo entero se vuelva rojo de ira.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -96,6 +102,8 @@
                             <p class="card-text">Tras recibir una misteriosa llamada de sus ancestros navegantes, Moana se embarca junto a Maui y una nueva tripulación
                             hacia los mares lejanos de Oceanía, adentrándose en aguas peligrosas y olvidadas para vivir una aventura como ninguna
                             otra.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -107,6 +115,8 @@
                             <p class="card-text">Un gato solitario, desplazado por una gran inundación, encuentra refugio en un barco junto a diversas especies. Juntos,
                             deberán enfrentar los desafíos de adaptarse a un mundo transformado, aprendiendo a sobrevivir y tal vez a convivir en
                             medio de la incertidumbre.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -119,6 +129,8 @@
                             <p class="card-text">Wade Wilson, ahora sumido en una vida monótona y sin propósito, ha dejado atrás sus días como el mercenario amoral
                             Deadpool. Pero cuando su mundo se enfrenta a una amenaza existencial, no le quedará más remedio que ponerse el traje
                             nuevamente… y arrastrar consigo a un tan reacio como inevitable Wolverine.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -136,6 +148,8 @@
                             cae bajo el yugo de los emperadores tiránicos que ahora gobiernan Roma con puño de hierro. Con el corazón lleno de ira y
                             el futuro del Imperio en juego, Lucio deberá buscar en su pasado la fuerza y el honor necesarios para devolver la gloria
                             a Roma.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -147,6 +161,8 @@
                             <p class="card-text">Mickey Barnes, un anti-héroe accidental, descubre que su nuevo empleo viene con una cláusula inusual: ¡morir es parte
                             del trabajo! Atrapado en un juego macabro donde cada "despido" es literal, Mickey tendrá que usar su ingenio (y sus
                             múltiples "vidas") para sobrevivir a un jefe que no acepta renuncias... solo cadáveres.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -160,6 +176,8 @@
                             le revela un nuevo destino: convertirse en la mejor jugadora de karuta de Japón. Tras separarse de sus amigos que
                             compartían su pasión por este milenario juego de cartas, una Chihaya ya en la preparatoria sigue entrenando con un solo
                             deseo: reunirse con ellos y alcanzar juntos la cumbre del torneo Hyakunin Isshu.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -176,6 +194,8 @@
                             persiguen: el "Libro de los Amigos" contiene nombres robados de criaturas sobrenaturales, y ahora ellos exigen
                             recuperarlos. Atrapado entre la soledad humana y el caos espiritual, Natsume emprenderá un viaje para devolver cada
                             nombre… y quizá, en el proceso, encontrar un lugar al que pertenecer.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -188,6 +208,8 @@
                             muertos vivientes hambrientos de carne. Armado solo con su instinto y sentido de justicia, Rick emprende una búsqueda
                             desesperada por encontrar a su familia. En el camino, se cruzará con otros supervivientes, algunos aliados, otros
                             enemigos, en una lucha constante donde los humanos pueden ser más peligrosos que los propios zombis.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -201,6 +223,8 @@
                             una guerra total, pero mientras los señores luchan por el Trono de Hierro, una amenaza ancestral despierta en el gélido
                             norte. En medio del caos, solo la Guardia de la Noche una orden militar de marginados y proscritos se interpone entre
                             la humanidad y las criaturas de hielo que amenazan con borrar el mundo del amanecer.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -218,6 +242,8 @@
                             Aprovechando su inteligencia científica sobresaliente, arrastra a su nieto Morty a una serie de aventuras peligrosas y
                             absurdas a través del espacio y universos alternativos. Mientras tanto, la ya disfuncional vida familiar de Morty se ve
                             aún más afectada por estos viajes, generándole problemas emocionales y sociales tanto en casa como en la escuela.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -230,6 +256,8 @@
                             Muerte, la obligan a ser su mejor amigo por toda la eternidad. El Poderoso Segador, ahora atrapado en el suburbio de
                             Endsville, debe lidiar con los caprichos de los niños mientras intenta (sin éxito) mantener un ápice de su dignidad
                             sobrenatural..</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -244,6 +272,8 @@
                             bajo el entrenamiento de su padre. Pero lo que prometía ser un sueño de héroe se convierte en una pesadilla cuando
                             descubre que la herencia de su sangre esconde secretos cósmicos que desafían todo lo que creía saber sobre el bien y el
                             mal.</p>
+                            <button class="btn btn-primary btn-more">Menos</button>
+                            <button class="btn btn-danger btn-delete">Eliminar</button>
                         </div>
                     </div>
                 </div>
@@ -255,8 +285,8 @@
         <div class="container">
             <p class="mb-1">&copy; 2025 Stream Service. Todos los derechos reservados.</p>
             <p class="mb-0">
-                <a href="terminos.html" class="text-white">Términos y condiciones</a> |
-                <a href="privacidad.html" class="text-white">Política de privacidad</a>
+                <a href="Trabajo en progreso" class="text-white">Términos y condiciones</a> |
+                <a href="Trabajo en progreso" class="text-white">Política de privacidad</a>
             </p>
         </div>
     </footer>
