--- a/Pagina/index.html
+++ b/Pagina/index.html
@@ -33,9 +33,6 @@
                         <a class="nav-link text-white" href="peliculas.html">Películas</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white" href="configuracion.html">Configuración</a>
-                    </li>
-                    <li class="nav-item">
                         <a class="nav-link text-white" href="login.html">Iniciar Sesión</a>
                     </li>
                 </ul>
@@ -182,7 +179,8 @@
                     </div>
                 </div>
             </div>
-        </div><div class="container p-3">
+        </div>
+        <div class="container p-3">
             <div class="row">
                 <div class="col">
                     <div class="card" style="width: 18rem;">
